# MorphoImg

./: .gitignore  Dilation.ipynb  Dilation.py  Erosion.ipynb  Erosion.py  LICENSE  Labuena.ipynb  Labuena.py  Open_Close.ipynb  Open_Close.py  README.md  hit_or_miss.py  image_env.yml  mfilt_funcs.py  pyproject.toml  requirements.txt  utils.py
