[tool.poetry]
name = "morphoimg"
version = "0.1.0"
description = ""
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.1"
matplotlib = "^3.2.1"
scipy = "^1.4.1"
scikit-image = "^0.17.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
